Fix inline jump bug

--- a/src/page-modules/contact/ticket-control/ticket-control.module.css
+++ b/src/page-modules/contact/ticket-control/ticket-control.module.css
@@ -1,6 +1,6 @@
 @value typo-body__secondary from "@atb/theme/typography.module.css";
 
-ul {
+.list {
   padding-left: var(--spacings-large);
 }
 
